MathML internals - embellished operators, getBase() accessor functions https://bugs.webkit.org/show_bug.cgi?id=78617

Patch by David Barton <dbarton@mathscribe.com> on 2012-02-17
Reviewed by Eric Seidel.

Define functions that return an unembellished "base", by omitting
subscripts/superscripts, underscripts/overscripts, or denominators. This is needed in
subsequent patches both for correct operator stretching and simple code factoring.

No new tests.

* rendering/mathml/RenderMathMLBlock.h:
(WebCore):
(RenderMathMLBlock):
(WebCore::RenderMathMLBlock::unembellishedOperator):
* rendering/mathml/RenderMathMLFraction.cpp:
(WebCore::RenderMathMLFraction::unembellishedOperator):
(WebCore):
* rendering/mathml/RenderMathMLFraction.h:
(RenderMathMLFraction):
* rendering/mathml/RenderMathMLOperator.h:
(WebCore::RenderMathMLOperator::unembellishedOperator):
* rendering/mathml/RenderMathMLSubSup.cpp:
(WebCore::RenderMathMLSubSup::base):
(WebCore):
(WebCore::RenderMathMLSubSup::unembellishedOperator):
(WebCore::RenderMathMLSubSup::stretchToHeight):
    - renamed a variable for clarity, especially in later patches
(WebCore::RenderMathMLSubSup::layout):
    - renamed a variable for clarity, especially in later patches
* rendering/mathml/RenderMathMLSubSup.h:
(RenderMathMLSubSup):
* rendering/mathml/RenderMathMLUnderOver.cpp:
(WebCore::RenderMathMLUnderOver::base):
(WebCore):
(WebCore::RenderMathMLUnderOver::unembellishedOperator):
(WebCore::RenderMathMLUnderOver::stretchToHeight):
* rendering/mathml/RenderMathMLUnderOver.h:
(RenderMathMLUnderOver):

Canonical link: https://commits.webkit.org/95966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108136 268f45cc-cd09-0410-ab3c-d52691b4dbfc