Source/WebCore/rendering/mathml/RenderMathMLSubSup.cpp
@@ -54,6 +54,17 @@ RenderMathMLSubSup::RenderMathMLSubSup(Element* element)
     }
 }
 
+RenderBoxModelObject* RenderMathMLSubSup::base() const
+{
+    RenderObject* baseWrapper = firstChild();
+    if (!baseWrapper)
+        return 0;
+    RenderObject* base = baseWrapper->firstChild();
+    if (!base || !base->isBoxModelObject())
+        return 0;
+    return toRenderBoxModelObject(base);
+}
+
 void RenderMathMLSubSup::addChild(RenderObject* child, RenderObject* beforeChild)
 {
     // Note: The RenderMathMLBlock only allows element children to be added.
@@ -104,14 +115,22 @@ void RenderMathMLSubSup::addChild(RenderObject* child, RenderObject* beforeChild
     }
 }
 
+RenderMathMLOperator* RenderMathMLSubSup::unembellishedOperator()
+{
+    RenderBoxModelObject* base = this->base();
+    if (!base || !base->isRenderMathMLBlock())
+        return 0;
+    return toRenderMathMLBlock(base)->unembellishedOperator();
+}
+
 void RenderMathMLSubSup::stretchToHeight(int height)
 {
-    RenderObject* base = firstChild();
-    if (!base || !base->firstChild())
+    RenderObject* baseWrapper = firstChild();
+    if (!baseWrapper || !baseWrapper->firstChild())
         return;
     
-    if (base->firstChild() && base->firstChild()->isRenderMathMLBlock()) {
-        RenderMathMLBlock* block = toRenderMathMLBlock(base->firstChild());
+    if (baseWrapper->firstChild() && baseWrapper->firstChild()->isRenderMathMLBlock()) {
+        RenderMathMLBlock* block = toRenderMathMLBlock(baseWrapper->firstChild());
         block->stretchToHeight(static_cast<int>(gSubSupStretch * height));
         
         // Adjust the script placement after we stretch
@@ -153,9 +172,9 @@ void RenderMathMLSubSup::layout()
     RenderBlock::layout();
     
     if (m_kind == SubSup) {
-        if (RenderObject* base = firstChild()) {
+        if (RenderObject* baseWrapper = firstChild()) {
             LayoutUnit maxHeight = 0;
-            RenderObject* current = base->firstChild();
+            RenderObject* current = baseWrapper->firstChild();
             while (current) {
                 LayoutUnit height = getBoxModelObjectHeight(current);
                 if (height > maxHeight)
@@ -165,8 +184,8 @@ void RenderMathMLSubSup::layout()
             LayoutUnit heightDiff = m_scripts ? (m_scripts->offsetHeight() - maxHeight) / 2 : zeroLayoutUnit;
             if (heightDiff < 0) 
                 heightDiff = 0;
-            base->style()->setPaddingTop(Length(heightDiff, Fixed));
-            base->setNeedsLayout(true);
+            baseWrapper->style()->setPaddingTop(Length(heightDiff, Fixed));
+            baseWrapper->setNeedsLayout(true);
         }
         setNeedsLayout(true);
         RenderBlock::layout();
